feat: integrate local Ollama model with agent runtime